# kyber-avr32

./: CMakeLists.txt  README.md
ref/: CMakeLists.txt  kex-del.c  kex-full.c  kex-helper.c  kex-helper.h  kex-init.c  kex-key.c  kex-pub.c  kexian.c  kexian.h  test_kex.c
